[tool.poetry]
name = "ddd-ije"
version = "0.1.0"
description = ""
authors = ["ownax-vit <ownax@mail.ru>"]
readme = "README.md"
packages = [{include = "ddd_ije"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.114.0"
mongo = "^0.2.0"
uvicorn = "^0.30.6"
ipython = "^8.27.0"
pytest = "^8.3.2"
faker = "^28.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
